k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: safechain-mk
  labels:
    app.kubernetes.io/part-of: safechain-mk
